--- a/Lavoro/index.html
+++ b/Lavoro/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,47 +10,64 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-<!-- TOP BAR -->
-<section class="top_bar_nav_section">
-    <div class="top_bar_nav">
-        <a href="#" class="Menu">
-            Menu
-        </a>
-        <a href="#">
-            Profile
-        </a>
-        <a href="#">
-            Contact
-        </a>
-    </div>
-</section>
-
-<!-- MAIN TEXT-->
-<section>
-    <div class="container_main_text">
-        <div class="main_text">
-            <h1>A Brand and product designer working with clients globally</h1>
+    <!-- TOP BAR -->
+    <section class="top_bar_nav_section">
+        <div class="top_bar_nav">
+            <a href="#" class="Menu">
+                Menu
+            </a>
+            <a href="#">
+                Profile
+            </a>
+            <a href="#">
+                Contact
+            </a>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- MEDIUM BAR -->
-<section class="medium_bar_nav_section">
-    <div class="medium_bar_nav">
-        <a href="#">Expertise</a>
-        <a href="#" class="unselected">Branding</a>
-        <a href="#" class="unselected">Product</a>
-        <a href="#" class="unselected">Design System</a>
-    </div>
-    
+    <!-- MAIN TEXT-->
+    <section>
+        <div class="container_main_text">
+            <div class="main_text">
+                <h1>A Brand and product designer working with clients globally</h1>
+            </div>
+        </div>
+    </section>
 
-</section>
-<!--Img-->
-<section class="Img">
-    <img class="ballimg" src="img/Palla.jpeg" alt="" width="500px">
-    <img class="stadio" src="img/Stadio .jpg" alt="">
-</section>
+    <!-- MEDIUM BAR -->
+    <section class="medium_bar_nav_section">
+        <div class="medium_bar_nav">
+            <a href="#">Expertise</a>
+            <a href="#" class="unselected">Branding</a>
+            <a href="#" class="unselected">Product</a>
+            <a href="#" class="unselected">Design System</a>
+        </div>
+
+
+    </section>
+    <!--Img-->
+    <section class="img">
+        <div class="img_contener">
+            <div class="img1">
+            </div>
+            <div class="img2">
+            </div>
+        </div>
+    </section>
+    <!--BOTTOM TEXT -->
+    <section class="section_bottom_text">
+        <div class="container_bottom_tex">
+            <div class="bottom_text_1">
+                <h3>Let's work togheter.</h3>
+            </div>
+            <div class="bottom_text_2">
+                <h3>Get in touch.</h3>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
