--- a/Lavoro/index.html
+++ b/Lavoro/index.html
@@ -68,6 +68,18 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <div class="footer_container">
+            <div class="footer_text">
+                <h5>© Oli Harris 2023</h5>
+            </div>
+            <div class="footer_text2">
+                <a href="#">Twitter</a>
+                <a href="#">Linkedin</a>
+                <a href="#">Mail</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
